syntax = "proto3";

package api.review.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/wyfcoding/ecommerce/go-api/review/v1;v1";

// Review Service
service Review {
    // Submit a new product review
    rpc CreateReview(CreateReviewRequest) returns (CreateReviewResponse);

    // 获取特定商品的评论
    rpc ListProductReviews(ListProductReviewsRequest) returns (ListProductReviewsResponse);

    // Get reviews by a specific user
    rpc ListUserReviews(ListUserReviewsRequest) returns (ListUserReviewsResponse);

    // 获取商品的总体评分
    rpc GetProductRating(GetProductRatingRequest) returns (GetProductRatingResponse);
}

// Represents a product review
message ReviewInfo {
    string id = 1;
    string product_id = 2;
    string user_id = 3;
    int32 rating = 4; // 1-5 stars
    string title = 5;
    string content = 6;
    google.protobuf.Timestamp created_at = 7;
    google.protobuf.Timestamp updated_at = 8;
}

// 创建评论请求
message CreateReviewRequest {
    string product_id = 1;
    string user_id = 2;
    int32 rating = 3;
    string title = 4;
    string content = 5;
}

// 创建评论响应
message CreateReviewResponse {
    ReviewInfo review = 1;
}

// 获取商品评论列表请求
message ListProductReviewsRequest {
    string product_id = 1;
    int32 page_size = 2;
    int32 page_token = 3;
}

// 获取商品评论列表响应
message ListProductReviewsResponse {
    repeated ReviewInfo reviews = 1;
    int32 total_count = 2;
    double average_rating = 3;
}

// 获取用户评论列表请求
message ListUserReviewsRequest {
    string user_id = 1;
    int32 page_size = 2;
    int32 page_token = 3;
}

// 获取用户评论列表响应
message ListUserReviewsResponse {
    repeated ReviewInfo reviews = 1;
    int32 total_count = 2;
}

// 获取商品评分请求
message GetProductRatingRequest {
    string product_id = 1;
}

// 获取商品评分响应
message GetProductRatingResponse {
    double average_rating = 1;
    int32 total_reviews = 2;
}
